--- a/HSUMHS.UI/HSUMHS.UI.csproj
+++ b/HSUMHS.UI/HSUMHS.UI.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\HSUMHS.Models\HSUMHS.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\fonts\" />
+  </ItemGroup>
+
 </Project>
